// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> Article Card should render correctly 1`] = `
<div
  className="card"
  data-testid="card"
>
  <t
    afterLoad={[Function]}
    beforeLoad={[Function]}
    className="card-image"
    data-testid="card-image"
    delayMethod="throttle"
    delayTime={300}
    effect=""
    onError={[Function]}
    placeholderSrc={null}
    sizes="(min-width:3200px) 800px, 1200px"
    src="https://source.unsplash.com/collection/2102317/1000x650?sig=403440"
    threshold={100}
    useIntersectionObserver={true}
    visibleByDefault={false}
    wrapperClassName=""
  />
  <Memo()
    title="Article Card"
  />
  <Memo(Text)
    color="dark"
    dataTestId="card-description"
  >
    Minim consectetur adipisicing aute consequat velit exercitation enim deserunt occaecat sit ut incididunt dolor id
  </Memo(Text)>
</div>
`;

exports[`<Card /> Basic Card should render correctly 1`] = `
<div
  className="card"
  data-testid="card"
>
  <Memo()
    title="Basic Card"
  />
  <Memo(Text)
    color="dark"
    dataTestId="card-description"
  >
    Dolore Lorem culpa ea irure do ad exercitation cillum laborum culpa sint aliqua voluptate duis
  </Memo(Text)>
</div>
`;

exports[`<Card /> Featured Review Card should render correctly 1`] = `
<div
  className="card"
  data-testid="card"
>
  <t
    afterLoad={[Function]}
    beforeLoad={[Function]}
    className="card-image"
    data-testid="card-image"
    delayMethod="throttle"
    delayTime={300}
    effect=""
    onError={[Function]}
    placeholderSrc={null}
    sizes="(min-width:3200px) 800px, 1200px"
    src="https://source.unsplash.com/collection/2102317/1000x650?sig=403440"
    threshold={100}
    useIntersectionObserver={true}
    visibleByDefault={false}
    wrapperClassName=""
  />
  <Memo()
    link={
      <a
        className="heading -large -black"
        href="#"
      >
        Featured Review Card
      </a>
    }
    score={4.5}
    title=""
  />
  <Memo(Text)
    color="dark"
    dataTestId="card-description"
  >
    Minim consectetur adipisicing aute consequat velit exercitation enim deserunt occaecat sit ut incididunt dolor id
  </Memo(Text)>
</div>
`;

exports[`<Card /> should render correctly only image 1`] = `
<div
  className="card"
  data-testid="card"
>
  <t
    afterLoad={[Function]}
    beforeLoad={[Function]}
    className="card-image"
    data-testid="card-image"
    delayMethod="throttle"
    delayTime={300}
    effect=""
    onError={[Function]}
    placeholderSrc={null}
    sizes="(min-width:3200px) 800px, 1200px"
    src="https://source.unsplash.com/collection/2102317/1000x650?sig=403440"
    threshold={100}
    useIntersectionObserver={true}
    visibleByDefault={false}
    wrapperClassName=""
  />
</div>
`;

exports[`<Card /> should render correctly with a custom class name 1`] = `
<div
  className="card some-custom-class-name"
  data-testid="card"
>
  <p>
    Hello World
  </p>
</div>
`;

exports[`<Card /> should render correctly with children 1`] = `
<div
  className="card"
  data-testid="card"
>
  <p>
    Hello World
  </p>
</div>
`;
